Update gatekeeper-opa-sync.yaml: add Node
Sync node data to gatekeeper

--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -8,6 +8,9 @@ spec:
     syncOnly:
       - group: ""
         version: "v1"
+        kind: "Node"
+      - group: ""
+        version: "v1"
         kind: "Namespace"
       - group: ""
         version: "v1"
