--- a/pod-security-policy/deny-extraction/template.yaml
+++ b/pod-security-policy/deny-extraction/template.yaml
@@ -23,10 +23,9 @@ spec:
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package denyextraction
-
-        import data.kubernetes.node_labels
+package denyextraction
         
+        # What does this do?
         same(a, b) {
           a == b
         }
@@ -34,10 +33,10 @@ spec:
         # If we can't load the node metadata,
         # then we need to reject the request since we can't confirm.
         violation[{"msg": msg}] {
-          subResources := ["attach", "exec"]
+          subResources := ["attach", "exec"] # Do I need to change this because we are looking at Nodes instead of Pods?
 
-          data.inventory.metadata.labels.agentpool != "userpb"
-          msg := sprintf("node_name %s.", [node_name])
+          not data.inventory.cluster["v1"].Node.name
+          msg := sprintf("Node: %v", [data.inventory.cluster["v1"].Node])
           #msg := sprintf("blocking <%v>, cannot verify labels on node <%v/%v>", [input.review.requestSubResource, input.review.namespace, input.review.name])
         }
 
