--- a/pod-security-policy/deny-extraction/template.yaml
+++ b/pod-security-policy/deny-extraction/template.yaml
@@ -34,8 +34,10 @@ spec:
         # then we need to reject the request since we can't confirm.
         violation[{"msg": msg}] {
           subResources := ["attach", "exec"] # Do I need to change this because we are looking at Nodes instead of Pods?
+          
+          not data.inventory.namespace[input.review.namespace]["v1"]["Pod"][input.review.name]
 
-          data.inventory.cluster["v1"].Node
+          #data.inventory.cluster["v1"].Node
           msg := sprintf("Node: %v", [data.inventory.cluster["v1"].Node])
           #msg := sprintf("blocking <%v>, cannot verify labels on node <%v/%v>", [input.review.requestSubResource, input.review.namespace, input.review.name])
         }
