Update template.yaml: nodeLabels -> podLabels

--- a/pod-security-policy/deny-extraction/template.yaml
+++ b/pod-security-policy/deny-extraction/template.yaml
@@ -11,7 +11,7 @@ spec:
         openAPIV3Schema:
           type: object
           properties:
-            nodeLabels:
+            podLabels:
               type: array
               items:
                 type: object
