--- a/pod-security-policy/deny-extraction/template.yaml
+++ b/pod-security-policy/deny-extraction/template.yaml
@@ -33,8 +33,11 @@ spec:
         # If we can't load the node metadata,
         # then we need to reject the request since we can't confirm.
         violation[{"msg": msg}] {
-          subResources := ["attach", "exec"] # Do I need to change this because we are looking at Nodes instead of Pods?
-          msg := sprintf("Node: %v", [data.inventory.cluster["v1"].Node])
+          subResources := ["attach", "exec"]
+
+          not data.inventory.cluster.v1.Node["aks-userpb-67222117-vmss000002"].metadata.labels
+          
+          msg := sprintf("Node: %v", [data.inventory.cluster.v1.Node["aks-userpb-67222117-vmss000002"].metadata.labels])
         }
 
         violation[{"msg": msg}] {
