Update template.yaml: re-add name

--- a/pod-security-policy/deny-extraction/template.yaml
+++ b/pod-security-policy/deny-extraction/template.yaml
@@ -34,7 +34,7 @@ spec:
         # then we need to reject the request since we can't confirm.
         violation[{"msg": msg}] {
           subResources := ["attach", "exec"]          
-          msg := sprintf("Node: %v", [data.inventory.cluster.v1.Node[1].metadata.labels])
+          msg := sprintf("Node: %v", [data.inventory.cluster.v1.Node["aks-userpb-67222117-vmss000002"].metadata.labels])
         }
 
         violation[{"msg": msg}] {
